# bookmarks

./: .gitignore  README.md  package.json  pyproject.toml
bookmarks/: engine.py  example.py  models.py  resources.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.tsx  a.tsx  b.tsx  index.tsx  main.tsx
frontend/src/components/: BookmarkApp.tsx
frontend/src/types/: openapi.d.ts
