[tool.poetry]
name = "bookmarks"
version = "0.1.0"
description = ""
authors = ["Violet Eldridge <github@violet-mica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy-addons = {path = "/home/violet/git/violet/python/sqlalchemy_addons"}
fastapi = "^0.109.0"
pydantic = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
